--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="jesse">
       <img src="disk.gif" id="cat">
       <br>
-      <h3 class="btn btn-danger">volume</h3>
+      <h3 class="btn btn-danger" id="volume">volume</h3>
     </div>
 	<br><br>
   <button onclick="play()"class="btn btn-success" id="emoji">play</button>
