--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="beaver">
       <img src="disk.gif" id="dog">
       <br>
-      <h3 class="btn btn-primary">speed</h3>
+      <h3 class="btn btn-primary" id="noob">speed</h3>
     </div>
     <div class="jesse">
       <img src="disk.gif" id="cat">
